tests/errors/stack_peek_empty_panics.ptt
// Runtime-panic test: Stack.peek on an empty stack must abort
// cleanly via the List.get out-of-range path.

use std/stack

spark {
  s is Stack of int
  yell(s.peek())
}
